--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.6",
     "@reduxjs/toolkit": "^2.2.7",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.17.4",
+    "framer-motion": "^11.3.30",
     "lint": "^0.8.19",
     "next": "14.2.6",
     "prettier": "^3.3.3",
