--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.17.4",
+    "formik": "^2.4.6",
     "framer-motion": "^11.3.30",
     "lint": "^0.8.19",
     "next": "14.2.6",
     "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
