--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^11.3.30",
     "lint": "^0.8.19",
     "next": "14.2.6",
+    "next-cloudinary": "^6.10.1",
     "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18",
